Refactor of Stack and Queue, add List and Refactor of QueueUnitTests, StackUnitTests

--- a/src/Estrutura.TestsConsole/Estrutura.TestsConsole.csproj
+++ b/src/Estrutura.TestsConsole/Estrutura.TestsConsole.csproj
@@ -10,7 +10,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>Estrutura.TestsConsole.PilhaTests.PilhaMain</StartupObject>
+    <StartupObject>Estrutura.TestsConsole.StackTests.StackMain</StartupObject>
   </PropertyGroup>
 
 </Project>
